[package]
name = "songs"
version = "0.1.0"
authors = ["Eli Dupree <vcs@elidupree.com>"]

[dependencies]
codecophony = {path="/n/codecophony-share-build/codecophony"}
hound = "3.1.0"
portaudio = "0.7.0"
dsp-chain = "0.13.1"
rand = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
lazy_static = "0.2"

#[patch."https://github.com/elidupree/codecophony.git"]
#codecophony = {path="/n/codecophony-share-build/codecophony"}

[profile.dev]
opt-level = 3
